--- a/efsjkefsjkjkegjkle.css
+++ b/efsjkefsjkjkegjkle.css
@@ -6,11 +6,15 @@
 .nam{
     border: 20px;
     text-align: center;
-    float:right
+    float:right;
+    font-size: 30px;
+    font-family: cursive;
 }
 .cia{
     text-align: center;
     float: left;
+    font-size: 30px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
 .kimoi{
     display:grid;
@@ -22,6 +26,8 @@
 }
 .haiyah{
     float: left;
+    font-size: 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .em{
     font-size: 200px;
