--- a/efsjkefsjkjkegjkle.css
+++ b/efsjkefsjkjkegjkle.css
@@ -32,3 +32,81 @@
 .em{
     font-size: 200px;
 }
+img{
+    max-width: 100%;
+    max-height: 100%;
+}
+@media screen and (max-width:600px){
+    div.haiyah{
+        width:100%;
+        height: auto;
+        
+    }
+    div.cia{
+        width:100%;
+        height: auto;
+    }
+    div.nam{
+        width:100%;
+        height: auto;
+    }
+    div.kimoi{
+        grid-template-columns: 33% 33% 33%;
+    }
+    .hoi{
+        width:150px;
+        height: 150px;
+    }
+    .no{
+        width:150px;
+        height: 150px;
+    }
+    .nop{
+        width:150px;
+        height: 150px;
+    }
+}
+@media screen and (min-width:601px){
+    div.haiyah{
+        width:100%;
+        height: auto;
+        
+    }
+    div.cia{
+        width:100%;
+        height: auto;
+    }
+    div.nam{
+        width:100%;
+        height: auto;
+    }
+    div.kimoi{
+        grid-template-columns: 33% 33% 33%;
+    }
+    .hoi.no.nop{
+        width:120px;
+        height:120px;
+    }
+}
+@media screen and (min-width:1000px){
+    div.haiyah{
+        width:100%;
+        height: auto;
+        
+    }
+    div.cia{
+        width:100%;
+        height: auto;
+    }
+    div.nam{
+        width:100%;
+        height: auto;
+    }
+    div.kimoi{
+        grid-template-columns: 33% 33% 33%;
+    }
+    .hoi.no.nop{
+        width:200px;
+        height:200px;
+    }
+}
