--- a/haiya.css
+++ b/haiya.css
@@ -1,8 +1,7 @@
-
 .kon{
     border:2px solid black;
     background-color: whitesmoke;
-    width:98.7%;
+    width:100%;
     height:100px;
     padding-right: 5px;
     padding: 10px;
@@ -42,6 +41,7 @@ div.mun{
         }
         div.kon{
             width:96%;
+            height:120px;   
         }
     }
     @media screen and (min-width:601px){
