--- a/xiaolang.css
+++ b/xiaolang.css
@@ -14,3 +14,27 @@
     height: auto;
     float: left;
 }
+@media screen and (max-width:600px){
+img{
+    width: 120px;
+    height: 100%;
+}
+}
+@media screen and (min-width:601px){
+img{
+    width: 180px;
+    height: auto;
+}
+@media screen and (max-width:1000px){
+img{
+    width: 250;
+    height: 300;
+}
+}
+@media screen and (min-width:1001px){
+img{
+    width:250px;
+    height:300px;
+}
+}
+}
